# tiny-rs

./: .gitignore  Cargo.toml  Inspirations.md  README.md  TODO.md  tinyrs-1.toml  tinyrs.toml
.github/workflows/: CI.yaml  publish.yaml  release.yaml
models/: llama-3-8b-gpt-4o.IQ3_M.gguf
src/: app.rs  images_path.rs  lib.rs  main.rs  message.rs  process.rs  state.rs
src/dock/: dock_screen.rs  mod.rs
src/home/: home_screen.rs  mod.rs
src/message/: button_style_toggle.rs
src/settings/: mod.rs  settings_content.rs  settings_screen.rs  settings_sidebar.rs
src/shared/: dock_button.rs  mod.rs  settings_sidebar_button.rs
src/state/: app_theme.rs  button_style_state.rs  log_text_state.rs  page.rs
