[package]
name = "tiny-rs"
version = "0.1.0"
authors = ["Yiming Lu <demolemon@ouytlook.at>"]
edition = "2021"
[dependencies]
tinify-rs = { version = "1.4.1", features = ["async"] }
iced = { version = "0.12.1", features = ["tokio"] }
rfd = "0.14.1"
anyhow = "1.0.86"
toml = { version = "0.8.19", features = ["parse"] }
serde = { version = "1", features = ["derive"] }
[profile.release]
opt-level = "s"
strip = true
[profile.dev]
debug = false # 启用调试信息
